--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,12 +1,5 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="margin-top: 140px;">
-    <h1>Welcome to {{ title }}</h1>
-    <div class="container">
-        <ul>
-            <li class="list-unstyled" *ngFor="let product of products">
-                {{ product.name }}
-            </li>
-        </ul>
-    </div>
+    <app-shop></app-shop>
 </div>
