--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,13 +8,13 @@
         <a class="p-2 text-dark"
            href="#">Contact</a>
     </nav>
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center justify-content-between">
         <a href="" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
             <div class="cart-no">5</div>
         </a>
-        <a class="btn btn-outline-secondary" mr-3>Log in</a>
-        <a class="btn btn-outline-secondary" mr-2>Sign up</a>
+        <a class="btn btn-outline-secondary ml-2">Log in</a>
+        <a class="btn btn-outline-secondary ml-2">Sign up</a>
     </div>
     
 </div>
