--- a/Client/src/app/shop/product-item/product-item.component.html
+++ b/Client/src/app/shop/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
     <img class="card-img-top bg-light" [src]="product.pictureUrl" [alt]="product.name">
     <div class="card-body d-flex flex-column">
-        <a href="">
+        <a routerLink="{{ product.id }}">
             <h6 class="text-uppercase">{{ product.name }}</h6>
         </a>
 
@@ -11,7 +11,8 @@
             <button type="button"
                     class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
             <button type="button"
-                    class="btn btn-outline-secondary">View</button>
+                    class="btn btn-outline-secondary"
+                    routerLink="{{ product.id }}">View</button>
         </div>
     </div>
 </div>
