--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -14,8 +14,8 @@
            routerLink="/shop"
            routerLinkActive="active">Shop</a>
         <a class="p-2"
-           routerLink="/contact"
-           routerLinkActive="active">Contact</a>
+           routerLink="/test-error"
+           routerLinkActive="active">Error</a>
     </nav>
 
     <div class="d-flex align-items-center justify-content-between">
